<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/toolbar_alignleft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/alignleft"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/alignleft"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/aligntop"
        android:contentDescription="@string/aligntop"
        android:visibility="invisible"
        android:id="@+id/toolbar_aligntop" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/alignright"
        android:contentDescription="@string/alignright"
        android:visibility="invisible"
        android:id="@+id/toolbar_alignright" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/alignbottom"
        android:contentDescription="@string/alignbottom"
        android:visibility="invisible"
        android:id="@+id/toolbar_alignbottom" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/distributehorizontal"
        android:contentDescription="@string/distributehorizontal"
        android:visibility="invisible"
        android:id="@+id/toolbar_distribute_horizontal" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/distributevertical"
        android:contentDescription="@string/distributevertical"
        android:visibility="invisible"
        android:id="@+id/toolbar_distribute_vertical" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/toolbar_edit" />
    <Spinner
        android:id="@+id/toolbar_scenes"
        android:layout_width="202dp"
        android:layout_height="match_parent"

        />

    <ImageButton
        android:id="@+id/toolbar_playpage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/playpageicon"
        android:contentDescription="@string/menuitem_playpage"
        app:layout_constraintEnd_toStartOf="@id/toolbar_instrumentspage"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        app:layout_constraintEnd_toStartOf="@id/toolbar_scenespage"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/instrumenteditpage"
        android:id="@+id/toolbar_instrumentspage"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/menuitem_soundgenerator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <ImageButton
        android:id="@+id/toolbar_scenespage"
        app:layout_constraintEnd_toStartOf="@id/toolbar_settingspage"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/scene"
        android:padding="4dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:contentDescription="@string/scenes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/toolbar_settingspage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:padding="4dp"
        android:contentDescription="@string/settings"
        android:scaleType="fitCenter"
        android:src="@drawable/settingspage" />
    </LinearLayout>
</HorizontalScrollView>