...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/sceneList"
        android:name="ch.sr35.touchsamplesynth.SceneFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sceneList"
...
            android:layout_height="wrap_content"
            android:text="@string/exportToJson"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="687dp" />

        <Button
            android:id="@+id/sceneImport"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importFromJson"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="692dp" />
...
