<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/instrument_page_layout"
    tools:context=".fragments.InstrumentsPageFragment">

    <ListView
        android:id="@+id/instruments_page_instruments_list"
        android:layout_width="320dp"
        android:layout_height="0dp"
...
