...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.SettingsFragment">


    <TableLayout
        android:id="@+id/settingParametersTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="50dp"
...
